// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viewUserRoute > renders no roles messages when roles are missing 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin/user-management/users">Users</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">User details</li>
  </ol>
</nav>


    



  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <h1 class="govuk-heading-l">User details</h1>

      <dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Full name
    </dt>
    <dd class="govuk-summary-list__value">
      No Roles User
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Email
    </dt>
    <dd class="govuk-summary-list__value">
      noroles@example.com
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Last login
    </dt>
    <dd class="govuk-summary-list__value">
      
    </dd>
  </div>
</dl>

      <h2 class="govuk-heading-m">IDP roles</h2>
        <p class="govuk-body">No IDP roles have been allocated to this user</p>

      <h2 class="govuk-heading-m govuk-!-margin-top-8">App roles</h2>
        <p class="govuk-body">No App Roles have been allocated to this user</p>

        <div class="govuk-button-group govuk-!-margin-top-8">
          <a href="/admin/user-management/users/user-123/roles" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
  Edit roles
</a>
        </div>
    </div>
  </div>
        "
`;

exports[`viewUserRoute > renders user details page 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin/user-management/users">Users</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">User details</li>
  </ol>
</nav>


    



  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <h1 class="govuk-heading-l">User details</h1>

      <dl class="govuk-summary-list">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Full name
    </dt>
    <dd class="govuk-summary-list__value">
      Martin Smith
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Email
    </dt>
    <dd class="govuk-summary-list__value">
      martin@ee.com
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key">
      Last login
    </dt>
    <dd class="govuk-summary-list__value">
      14 December 2025 20:03
    </dd>
  </div>
</dl>

      <h2 class="govuk-heading-m">IDP roles</h2>
        <div class="govuk-button-group tag-button-group">
            <strong class="govuk-tag govuk-tag--green tag-no-wrap">
  FCP.Casework.Read
</strong>

        </div>

      <h2 class="govuk-heading-m govuk-!-margin-top-8">App roles</h2>
        <div class="govuk-button-group tag-button-group">
            <strong class="govuk-tag govuk-tag--green tag-no-wrap">
  ROLE_RPA_CASES_APPROVE
</strong>

            <strong class="govuk-tag govuk-tag--green tag-no-wrap">
  ROLE_RPA_CASES_CREATE
</strong>

        </div>

        <div class="govuk-button-group govuk-!-margin-top-8">
          <a href="/admin/user-management/users/user-123/roles" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
  Edit roles
</a>
        </div>
    </div>
  </div>
        "
`;
